--- a/app/public/pages/nav/nav.html
+++ b/app/public/pages/nav/nav.html
@@ -1,6 +1,5 @@
 <!-- Sidebar -->
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation"
-        ng-controller="LayoutCtrl as vm">
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
@@ -44,7 +43,7 @@
         <ul class="nav navbar-nav navbar-right navbar-user">
 
             <li class="dropdown user-dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> {{firstName}} {{lastName}} <b class="caret"></b></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> {{vm.firstName}} {{vm.lastName}} <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                     <li ng-hide="vm.user.isAdmin"><a ui-sref="profile"><i class="fa fa-user"></i> Profile</a>
                     </li>
