--- a/app/public/pages/profile/profile.html
+++ b/app/public/pages/profile/profile.html
@@ -36,7 +36,7 @@
                     </div>
                     <div class="form-group">
                         <label for="dob">Date of Birth</label>
-                        <input type="date" class="form-control" id="dob" name="dob" value="{{vm.dob}}" placeholder="Enter date of birth">
+                        <input type="date" class="form-control" id="dob" name="dob" value="{{vm.dob|date}}" placeholder="Enter date of birth">
                     </div>
                     <div class="form-group">
                         <label for="bankAcc">Bank Account #</label>
@@ -44,7 +44,7 @@
                     </div>
                     <div class="form-group">
                         <label for="bankRouting">Bank Routing #</label>
-                        <input type="text" class="form-control" id="bankRouting" name="bankRouting" value="{{bankRouting}}" placeholder="Enter bank routing number">
+                        <input type="text" class="form-control" id="bankRouting" name="bankRouting" value="{{vm.bankRouting}}" placeholder="Enter bank routing number">
                     </div>
                     <div class="form-group">
                         <label for="address">Address</label>
