Add Mock API interaction

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -34,16 +34,22 @@
     <script src="assets/external/bootstrap/bootstrap.js"></script>
     <script src="assets/external/angular/angular.js"></script>
     <script src="assets/external/angular/angular-ui-router.js"></script>
+    <script src="assets/external/angular/angular-resource.min.js"></script>
+    <script src="assets/external/angular/angular-mocks.js"></script>
     <script src="assets/external/chart/raphael-min.js"></script>
     <script src="assets/external/chart/morris-0.4.3.min.js"></script>
     <!-- Home page Chart data -->
     <script src="assets/js/chart/chart-data-morris.js"></script>
     <!-- Application Specific Scripts -->
     <script src="app.js"></script>
+    <script src="services/common.services.js"></script>
+    <script src="services/contributionsResource.js"></script>
+    <script src="services/contributionsResourceMock.js"></script>
     <script src="pages/allocations/allocationsCtrl.js"></script>
     <script src="pages/benefits/benefitsCtrl.js"></script>
     <script src="pages/contributions/contributionsCtrl.js"></script>
     <script src="pages/profile/profileCtrl.js"></script>
+
     <!-- Load live reload script -->
     <script>
     document.write("<script src='//" + (location.host || "localhost").split(":")[0] + ":35729/livereload.js'></" + "script>");
