--- a/app/public/pages/contributions/contributions.html
+++ b/app/public/pages/contributions/contributions.html
@@ -3,7 +3,7 @@
     <div class="col-lg-12">
 
 
-        <div class="row" ng-show="vm.updateSuccess">
+        <div class="row" ng-show="vm.contributions.updateSuccess">
             <div class="col-lg-12">
                 <div class="alert alert-dismissable alert-success">
                     <button type="button" class="close" data-dismiss="alert">&times;</button>
@@ -13,11 +13,11 @@
         </div>
         <!-- /.row -->
 
-        <div class="row" ng-show="vm.updateError">
+        <div class="row" ng-show="vm.contributions.updateError">
             <div class="col-lg-12">
                 <div class="alert alert-dismissable alert-danger">
                     <button type="button" class="close" data-dismiss="alert">&times;</button>
-                    {{vm.updateError}}
+                    {{vm.contributions.updateError}}
                 </div>
             </div>
         </div>
@@ -57,7 +57,7 @@
 
                                 <tr>
                                     <td>Employee Pre-Tax</td>
-                                    <td>{{ vm.preTax || 0}} %</td>
+                                    <td>{{ vm.contributions.preTax || 0}} %</td>
                                     <td>
                                         <input type="text" name="preTax" value="0"></input>
                                         <span>%</span>
@@ -65,7 +65,7 @@
                                 </tr>
                                 <tr>
                                     <td>Roth Contribution</td>
-                                    <td>{{ vm.roth || 0}} %</td>
+                                    <td>{{ vm.contributions.roth || 0}} %</td>
                                     <td>
                                         <input type="text" name="roth" value="0"></input>
                                         <span>%</span>
@@ -73,7 +73,7 @@
                                 </tr>
                                 <tr>
                                     <td>Employee After Tax</td>
-                                    <td>{{ vm.afterTax || 0}} %</td>
+                                    <td>{{ vm.contributions.afterTax || 0}} %</td>
                                     <td>
                                         <input type="text" name="afterTax" value="0"></input>
                                         <span>%</span>
