--- a/app/public/index.html
+++ b/app/public/index.html
@@ -34,7 +34,7 @@
     <script src="assets/external/bootstrap/bootstrap.js"></script>
     <script src="assets/external/angular/angular.js"></script>
     <script src="assets/external/angular/angular-ui-router.js"></script>
-    <script src="assets/external/angular/angular-resource.min.js"></script>
+    <script src="assets/external/angular/angular-resource.js"></script>
     <script src="assets/external/angular/angular-mocks.js"></script>
     <script src="assets/external/chart/raphael-min.js"></script>
     <script src="assets/external/chart/morris-0.4.3.min.js"></script>
