--- a/app/frontend/pages/dashboard/dashboard.html
+++ b/app/frontend/pages/dashboard/dashboard.html
@@ -12,7 +12,7 @@
                     </div>
                 </div>
             </div>
-            <a href="/contributions">
+            <a ui-sref="contributions">
                 <div class="panel-footer announcement-bottom">
                     <div class="row">
                         <div class="col-xs-6">
