--- a/app/frontend/pages/nav/nav.html
+++ b/app/frontend/pages/nav/nav.html
@@ -43,7 +43,7 @@
         <ul class="nav navbar-nav navbar-right navbar-user">
 
             <li class="dropdown user-dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> {{vm.firstName}} {{vm.lastName}} <b class="caret"></b></a>
+                <a class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> {{vm.firstName}} {{vm.lastName}} <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                     <li ng-hide="vm.user.isAdmin"><a ui-sref="profile"><i class="fa fa-user"></i> Profile</a>
                     </li>
