--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -41,12 +41,19 @@
     <!-- Home page Chart data -->
     <script src="assets/js/chart/chart-data-morris.js"></script>
     <!-- Application Specific Scripts -->
-    <script src="core/core.module.js"></script>
     <script src="app.js"></script>
     <script src="services/resources/resources.module.js"></script>
     <script src="services/resources/contributionsResource.js"></script>
+    <script src="services/resources/allocationsResource.js"></script>
+    <script src="services/resources/benefitsResource.js"></script>
+    <script src="services/resources/profileResource.js"></script>
+
     <script src="services/mock/mock.module.js"></script>
     <script src="services/mock/contributionsResourceMock.js"></script>
+    <script src="services/mock/benefitsResourceMock.js"></script>
+    <script src="services/mock/allocationsResourceMock.js"></script>
+    <script src="services/mock/profileResourceMock.js"></script>
+
 
     <script src="pages/pages.module.js"></script>
     <script src="pages/allocations/allocationsCtrl.js"></script>
