--- a/app/frontend/pages/benefits/benefits.html
+++ b/app/frontend/pages/benefits/benefits.html
@@ -40,7 +40,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr ng-repeat="user in vm.users">
+                    <tr ng-repeat="user in vm.benefits.users">
                         <td>{{user._id.toString()}}</td>
                         <td>{{user.firstName}}</td>
                         <td>{{user.lastName}}</td>
